--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,27 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorDivider">#61595c</color>
+
+    <color name="tab_item_selected">#79a973</color>
+    <color name="tab_item_unselected">#9ea69e</color>
+    <color name="tab_bar_bg">#e7ede7</color>
+
+    <!-- 标题栏 -->
+    <color name="bg_title_bar">#8393a1</color>
+
+    <!-- 按钮 -->
+    <color name="bg_btn_normal">#4c7dcc</color>
+    <color name="bg_btn_pressed">#1d6381</color>
+    <color name="bg_btn_focused">#1d6381</color>
+    <color name="bg_delete_btn_normal">#f13e35</color>
+    <color name="bg_delete_btn_pressed">#931111</color>
+    <color name="bg_delete_btn_focused">#931111</color>
+    <color name="bg_login_btn_normal">#66de62</color>
+    <color name="bg_login_btn_pressed">#42b43e</color>
+    <color name="bg_login_btn_focused">#42b43e</color>
+
+    <color name="list_item_text">#5b5b58</color>
+    <color name="list_item_text_high">#4287e1</color>
+    <color name="list_item_subtitle_text">#9f9f9d</color>
 </resources>
