--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,142 +3,148 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:paddingBottom="@dimen/activity_vertical_margin"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
 tools:context=".LoginActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/login_title"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/app_title"
-        android:textSize="28sp"
-        android:textColor="@android:color/holo_green_dark"
-        android:layout_marginTop="36dp"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
+        android:background="@color/colorPrimary"
         />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:id="@+id/login_main_pic"
+        android:layout_below="@id/login_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login_main_pic"
         />
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/login_inputs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp">
+        android:layout_below="@id/login_main_pic"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="用户名："
-            />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp">
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:id="@+id/usernameEdit"
-            android:hint="请填写登录帐号"
-            android:selectAllOnFocus="true"
-            android:maxLines="1"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="用户名："
+                />
 
-    </LinearLayout>
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:id="@+id/usernameEdit"
+                android:hint="请填写登录帐号"
+                android:selectAllOnFocus="true"
+                android:maxLines="1"
+                />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp">
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="密码：    "
-            />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp">
 
-        <EditText
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="密   码： "
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:inputType="textPassword"
+                android:hint="请填写密码"
+                android:id="@+id/passwordEdit"
+                />
+
+        </LinearLayout>
+
+        <Button
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:inputType="textPassword"
-            android:hint="请填写密码"
-            android:id="@+id/passwordEdit"
-            />
+            android:layout_marginTop="5dp"
+            android:background="@color/colorPrimary"
+            android:text="登录"
+            android:id="@+id/login_btn" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="5dp">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="记住用户名"
+                android:id="@+id/rememberUserName" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="记住密码"
+                android:id="@+id/rememberPassword" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="10dp">
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="记住用户名"
-            android:id="@+id/rememberUserName" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="记住密码"
-            android:id="@+id/rememberPassword" />
-
-    </LinearLayout>
-
-
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="登录"
-        android:id="@+id/loginbtn" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/vendor_name"
+        android:textSize="18dp"
+        android:gravity="center"
+        android:layout_above="@+id/version_text" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/vendor_name"
-        android:layout_marginTop="48dp" />
-</LinearLayout>
+        android:text="版本号：V1.0"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/version_text"/>
 
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceSmall"
-    android:text="版本号：V1.0"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:id="@+id/versonText"/>
-
-<Button
-    android:layout_width="80dp"
-    android:layout_height="30dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:layout_marginBottom="-7dp"
-    android:textAppearance="?android:attr/textAppearanceSmall"
-    android:text="服务器地址"
-    android:id="@+id/serveIPBtn" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="-7dp"
+        android:layout_marginEnd="10dp"
+        android:background="@android:color/white"
+        android:text="服务器"
+        android:id="@+id/login_server_ip_btn" />
 
 </RelativeLayout>
