--- a/app/src/main/res/layout/activity_componet_detail.xml
+++ b/app/src/main/res/layout/activity_componet_detail.xml
@@ -13,4 +13,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_bar"
+        android:layout_alignParentBottom="true">
+
+        <org.apmem.tools.layouts.FlowLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/flow_layout"/>
+
+    </ScrollView>
+
 </RelativeLayout>
