--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_project_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.jacoli.roadsitesupervision.ProjectDetailActivity">
 
     <com.jacoli.roadsitesupervision.TitleBar
@@ -14,60 +14,54 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <LinearLayout
-        android:id="@+id/main_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/title_bar"
-        android:divider="@drawable/linear_divider_horizon"
-        android:showDividers="end">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:textSize="24sp"
-            android:text="检查人：" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:textSize="20sp"
-            android:text="日期：" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:textSize="20sp"
-            android:text="天气：   气温：" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/projects"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:textSize="24sp"
-        android:layout_below="@+id/main_info"
-        android:text="单位工程：" />
-
-    <GridView
-        android:id="@+id/gridview"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/projects"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="5dp"
-        android:columnWidth="48dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidth"
-        android:gravity="center"
-        />
+        android:layout_below="@+id/title_bar"
+        android:layout_alignParentBottom="true">
+
+        <org.apmem.tools.layouts.FlowLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="24dp"
+            android:layout_marginBottom="64dp"
+            android:id="@+id/flow_layout">
+
+            <TextView
+                android:id="@+id/operator_text"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:textSize="24sp"
+                android:text="检查人：" />
+
+            <TextView
+                android:id="@+id/date_text"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:textSize="20sp"
+                android:text="日期：" />
+
+            <TextView
+                android:id="@+id/weather_text"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:textSize="20sp"
+                android:text="天气：   气温：" />
+
+            <View android:layout_height="2dp"
+                android:layout_width="match_parent"
+                android:background="@color/colorDivider"/>
+
+            <TextView
+                android:id="@+id/project_name_text"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:textSize="24sp"
+                android:layout_below="@+id/main_info"
+                android:text="单位工程："/>
+
+        </org.apmem.tools.layouts.FlowLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
