--- a/app/src/main/res/layout/activity_unit_project_detail.xml
+++ b/app/src/main/res/layout/activity_unit_project_detail.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_unit_project_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jacoli.roadsitesupervision.UnitProjectDetailActivity">
 
     <com.jacoli.roadsitesupervision.TitleBar
@@ -35,33 +31,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
                 android:textSize="24sp"
-                android:text="检查人：" />
-
-            <TextView
-                android:id="@+id/date_text"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="20sp"
-                android:text="日期：" />
-
-            <TextView
-                android:id="@+id/weather_text"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="20sp"
-                android:text="天气：   气温：" />
+                android:text="第2联旁站情况：" />
 
             <View android:layout_height="2dp"
                 android:layout_width="match_parent"
                 android:background="@color/colorDivider"/>
-
-            <TextView
-                android:id="@+id/project_name_text"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="24sp"
-                android:layout_below="@+id/main_info"
-                android:text="单位工程："/>
 
         </org.apmem.tools.layouts.FlowLayout>
 
