--- a/app/src/main/res/layout/activity_component_detail.xml
+++ b/app/src/main/res/layout/activity_component_detail.xml
@@ -13,4 +13,32 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_bar"
+        android:layout_alignParentBottom="true">
+
+        <org.apmem.tools.layouts.FlowLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="24dp"
+            android:layout_marginBottom="64dp"
+            android:id="@+id/flow_layout">
+
+            <TextView
+                android:id="@+id/operator_text"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:textSize="24sp"
+                android:text="基桩旁站情况：" />
+
+            <View android:layout_height="2dp"
+                android:layout_width="match_parent"
+                android:background="@color/colorDivider"/>
+
+        </org.apmem.tools.layouts.FlowLayout>
+
+    </ScrollView>
+
 </RelativeLayout>
