--- a/app/src/main/res/layout/activity_pzdetail.xml
+++ b/app/src/main/res/layout/activity_pzdetail.xml
@@ -13,4 +13,31 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/submit_btn"
+        android:layout_below="@+id/title_bar">
+
+        <TableLayout
+            android:id="@+id/table_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@drawable/divider_common"
+            android:showDividers="middle|end|beginning"
+            android:orientation="vertical">
+        </TableLayout>
+
+    </ScrollView>
+
+    <Button
+        android:layout_width="164dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:background="@color/colorPrimary"
+        android:text="提交／暂存"
+        android:id="@+id/submit_btn" />
+
 </RelativeLayout>
