--- a/app/src/main/res/layout/activity_pzdetail.xml
+++ b/app/src/main/res/layout/activity_pzdetail.xml
@@ -26,6 +26,33 @@
             android:divider="@drawable/divider_common"
             android:showDividers="middle|end|beginning"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="30dp">
+
+                <TextView
+                    android:id="@+id/name_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:textSize="20sp"
+                    android:text="旁站项目：" />
+
+                <TextView
+                    android:id="@+id/project_name_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:textSize="20sp"
+                    android:text="工序部位：" />
+
+                <View android:layout_height="2dp"
+                    android:layout_width="match_parent"
+                    android:background="@color/colorDivider"/>
+
+            </LinearLayout>
+
         </TableLayout>
 
     </ScrollView>
