--- a/app/src/main/res/layout/activity_server_address.xml
+++ b/app/src/main/res/layout/activity_server_address.xml
@@ -42,6 +42,7 @@ tools:context="com.jacoli.roadsitesupervision.ServerAddressActivity">
                 android:hint="请填写服务器地址"
                 android:selectAllOnFocus="true"
                 android:maxLines="1"
+                android:singleLine="true"
                 />
 
 
@@ -66,6 +67,7 @@ tools:context="com.jacoli.roadsitesupervision.ServerAddressActivity">
                 android:layout_height="40dp"
                 android:selectAllOnFocus="true"
                 android:maxLines="1"
+                android:singleLine="true"
                 android:hint="请填写服务器端口"
                 android:id="@+id/newServerAddress"
                 />
