--- a/app/src/main/res/layout/pz_detail_text_row_layout.xml
+++ b/app/src/main/res/layout/pz_detail_text_row_layout.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:padding="5dp"
         android:id="@+id/title_text_view"
         android:text="title_text_view"
         />
