--- a/app/src/main/res/layout/pz_detail_section_header_layout.xml
+++ b/app/src/main/res/layout/pz_detail_section_header_layout.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:textSize="24sp"
-    android:layout_marginStart="24dp"
+    android:padding="10dp"
+    android:paddingStart="24dp"
+    android:textColor="@android:color/primary_text_dark_nodisable"
+    android:background="@color/colorPrimary"
     android:id="@+id/textView"
     android:text="section_header"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
     />
