--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.jacoli.roadsitesupervision.ProjectDetailActivity">
 
-    <com.jacoli.roadsitesupervision.TitleBar
+    <com.jacoli.roadsitesupervision.views.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,30 +23,32 @@
         <org.apmem.tools.layouts.FlowLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:layout_marginBottom="64dp"
+            android:layout_margin="20dp"
             android:id="@+id/flow_layout">
 
             <TextView
                 android:id="@+id/operator_text"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="24sp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:padding="5dp"
                 android:text="检查人：" />
 
             <TextView
                 android:id="@+id/date_text"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="20sp"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="5dp"
                 android:text="日期：" />
 
             <TextView
                 android:id="@+id/weather_text"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="20sp"
-                android:text="天气：   气温：" />
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="5dp"
+                android:text="天气：" />
 
             <View android:layout_height="2dp"
                 android:layout_width="match_parent"
@@ -55,10 +57,10 @@
             <TextView
                 android:id="@+id/project_name_text"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:textSize="24sp"
-                android:layout_below="@+id/main_info"
-                android:text="单位工程："/>
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:padding="5dp"
+                android:text="单位工程"/>
 
         </org.apmem.tools.layouts.FlowLayout>
 
