--- a/app/src/main/res/layout/activity_inspection_detail.xml
+++ b/app/src/main/res/layout/activity_inspection_detail.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/accent"
         android:text="提交／暂存"
         android:id="@+id/submit_btn" />
 
