--- a/app/src/main/res/layout/activity_pzdetail.xml
+++ b/app/src/main/res/layout/activity_pzdetail.xml
@@ -53,7 +53,7 @@
 
                 <View android:layout_height="2dp"
                     android:layout_width="match_parent"
-                    android:background="@color/colorDivider"/>
+                    android:background="@color/divider"/>
 
             </LinearLayout>
 
@@ -141,7 +141,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/accent"
         android:text="提交／暂存"
         android:id="@+id/submit_btn" />
 
