--- a/app/src/main/res/layout/activity_server_address.xml
+++ b/app/src/main/res/layout/activity_server_address.xml
@@ -81,7 +81,7 @@ tools:context="com.jacoli.roadsitesupervision.ServerAddressActivity">
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:background="@color/colorPrimary"
+            android:background="@color/accent"
             android:text="修改"
             android:id="@+id/modifyBtn" />
     </LinearLayout>
