--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@ tools:context=".LoginActivity">
         android:text="@string/app_title"
         android:textSize="24sp"
         android:textColor="@android:color/white"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
         />
 
     <ImageView
@@ -91,7 +91,7 @@ tools:context=".LoginActivity">
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/accent"
             android:text="登录"
             android:id="@+id/login_btn" />
 
