--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        app:bb_activeTabColor="@color/colorPrimary"
+        app:bb_activeTabColor="@color/primary"
         app:bb_tabXmlResource="@xml/main_tabs_bar" />
 
 </RelativeLayout>
