--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -52,7 +52,7 @@
 
             <View android:layout_height="2dp"
                 android:layout_width="match_parent"
-                android:background="@color/colorDivider"/>
+                android:background="@color/divider"/>
 
             <TextView
                 android:id="@+id/project_name_text"
