--- a/app/src/main/res/layout/pz_detail_section_header_layout.xml
+++ b/app/src/main/res/layout/pz_detail_section_header_layout.xml
@@ -7,7 +7,7 @@
     android:padding="10dp"
     android:paddingStart="24dp"
     android:textColor="@android:color/primary_text_dark_nodisable"
-    android:background="@color/colorPrimary"
+    android:background="@color/primary"
     android:id="@+id/textView"
     android:text="section_header"
 
