--- a/app/src/main/res/layout/activity_inspection_detail.xml
+++ b/app/src/main/res/layout/activity_inspection_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_inspection_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.jacoli.roadsitesupervision.InspectionDetailActivity">
 
     <com.jacoli.roadsitesupervision.views.TitleBar
@@ -14,36 +15,49 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="巡视情况："
         android:textSize="24sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_below="@+id/title_bar"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:text="巡视情况："/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/submit_btn"
-        android:layout_below="@+id/textView"
+        android:layout_weight="1"
         android:padding="5dp"
-        android:hint="请输入巡视情况"
         android:id="@+id/editText"
         android:singleLine="false"
         android:gravity="top"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
+        android:hint="请输入巡视情况"
+        />
+
+    <TextView
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:id="@+id/textView2"
+        android:text="选择图片："/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
         />
 
     <Button
         android:layout_width="164dp"
         android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
+        android:layout_gravity="center"
         android:background="@color/accent"
         android:text="提交／暂存"
         android:id="@+id/submit_btn" />
 
-</RelativeLayout>
+</LinearLayout>
