--- a/app/src/main/res/layout/activity_sampling_inspection.xml
+++ b/app/src/main/res/layout/activity_sampling_inspection.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.jacoli.roadsitesupervision.SamplingInspectionActivity">
 
     <com.jacoli.roadsitesupervision.views.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:textSize="24sp"
@@ -20,7 +20,9 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:id="@+id/textView"
-        android:text="巡视情况："/>
+        android:text="抽检情况："/>
+
+    <requestFocus />
 
     <EditText
         android:layout_width="match_parent"
