--- a/app/src/main/res/layout/activity_inspection_detail.xml
+++ b/app/src/main/res/layout/activity_inspection_detail.xml
@@ -26,25 +26,12 @@
             android:focusableInTouchMode="true">
 
             <TextView
-                android:id="@+id/name_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:text="工序部位：" />
-
-            <View android:layout_height="2dp"
-                android:layout_width="match_parent"
-                android:layout_marginBottom="10dp"
-                android:background="@color/divider"/>
-
-            <TextView
                 android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:id="@+id/textView"
-                android:text="抽检情况："/>
+                android:text="巡视情况："/>
 
             <requestFocus />
 
