--- a/app/src/main/res/layout/fragment_todolist_list.xml
+++ b/app/src/main/res/layout/fragment_todolist_list.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="我的任务" />
+        android:id="@+id/listView"
+        />
 
 </RelativeLayout>
