--- a/app/src/main/res/layout/list_item_assigned_mater_list.xml
+++ b/app/src/main/res/layout/list_item_assigned_mater_list.xml
@@ -30,9 +30,19 @@
             android:textSize="14sp"
             android:textColor="@color/secondary_text"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:id="@+id/textView2"
-            android:text="时间"
+            android:text="交办人："
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/secondary_text"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/textView3"
+            android:text="最后回复："
             />
 
     </LinearLayout>
