--- a/app/src/main/res/layout/activity_inspection_detail.xml
+++ b/app/src/main/res/layout/activity_inspection_detail.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:paddingBottom="64dp"
             android:orientation="vertical"
             android:focusable="true"
             android:focusableInTouchMode="true">
@@ -51,21 +52,19 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="64dp"
                 android:layout_marginTop="20dp"
                 />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/cell_height"
+                android:layout_margin="16dp"
+                android:background="@color/accent"
+                android:text="提交／暂存"
+                android:id="@+id/submit_btn" />
 
         </LinearLayout>
 
     </ScrollView>
-
-    <Button
-        android:layout_width="164dp"
-        android:layout_height="40dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"
-        android:background="@color/accent"
-        android:text="提交／暂存"
-        android:id="@+id/submit_btn" />
 
 </LinearLayout>
